--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <h3>
                                 I am <br> Siddharth Vangari
                             </h3>
-                            <span>Machine Learning Engineer</span>
+                            <span>Data Scientist</span>
                         </div>
                     </div>
                 </div>
