--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="social_links">
                 <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-44b93616b"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
@@ -183,7 +183,7 @@
                         <a href="img/portfolio/21.jpg" class="popup popup-image"></a>
                         <div class="portfolio_hover">
                             <div class="title">
-                                    <h3>Computer Vision (TensorFlow) - 4</h3><br>
+                                    <h3>Computer Vision (OpenCV) - 4</h3><br>
                                     <h3>NLP (Spacy / TensorFlow) - 4</h3>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                         <a href="img/portfolio/31.png" class="popup popup-image"></a>
                         <div class="portfolio_hover">
                             <div class="title">
-                                    <h3>Visualization (Tableau) - 4</h3><br>
+                                    <h3>Visualization (Power BI / Excel) - 5</h3><br>
                                     <h3>Big Data (HIVE / Spark) - 5</h3>
                             </div>
                         </div>
@@ -272,7 +272,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_counter text-center">
                         <h3>
-                            <span class="counter" >24</span><span>+</span>
+                            <span class="counter" >10</span><span>+</span>
                         </h3>
                         <p>Total Projects</p>
                     </div>
@@ -280,7 +280,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_counter text-center">
                         <h3>
-                            <span class="counter">12</span>
+                            <span class="counter">4</span>
                         </h3>
                         <p>On Going Projects</p>
                     </div>
@@ -327,7 +327,7 @@
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-44b93616b"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
