--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo1.png" alt="">
+                                    <img src="img/Sid_logo.jpeg" alt="">
                                 </a>
                             </div>
                         </div>
