--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo1.png" alt="">
+                                    <img src="img/Sid_logo.jpeg" alt="">
                                 </a>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                         <h3>PERSONAL DETAILS</h3>
                         <p>At the beginning of 2019 still pursuing my under-graduation, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.
 <br><br>
-Today, I am nearing the end of my Computer Science Bachelors at the Vidyalankar School of Information Technology in Mumbai. I just finished an internship as a data scientist at WeWork, using machine learning and statistical methods to detect when business systems fail. In the coming weeks, I will be actively searching for data science and machine learning engineering positions in Mumbai, India.</p>
+Today, I am nearing the end of my Computer Science Bachelors at the Vidyalankar School of Information Technology in Mumbai. I just finished an internship as a data scientist at Mastek, using machine learning and statistical methods to detect when business systems fail. In the coming weeks, I will be actively searching for data science and machine learning engineering positions in Mumbai, India.</p>
                         <div class="download_cv">
                             <a class="boxed-btn3" href="https://drive.google.com/file/d/1coDdIEBtHNBH3PYQHsJk2EdDFx_hzBVM/view?usp=sharing">Download CV</a>
                         </div>
@@ -179,7 +179,7 @@ Today, I am nearing the end of my Computer Science Bachelors at the Vidyalankar 
                                         <div class="testmonial_author">
                                                 <h3>Why did you create this Website?</h3>
                                             </div>
-                                            <p>I created and deployed this website on a private DigitalOcean server so that I could learn more about web app design and back-end development.<br><br>
+                                            <p>I created and deployed this website so that I could learn more about web app design and back-end development.<br><br>
 In the future I will use this website as a nesting ground for web-based computer vision and NLP models. Though I don't expect it to be anything more than a portfolio site, I strongly suspect that these skills will be crucial to technological development in the years to come.</p>
                                             
                                         </div>
@@ -268,9 +268,7 @@ Position titles that do this work are not well defined. I describe my perfect fu
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved .</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
