--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Siddharth V.</title>
+    <title>Siddharth Vangari</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -54,7 +54,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a  href="https://drive.google.com/file/d/1Fw7yGVD-9f4j-W51dLhpw7yXXvOTg0pY/view?usp=sharing">RESUME</a>
+                                    <a  href="https://drive.google.com/file/d/1v3EUD2eYFtBlXkjieGzSMnzDVF-rN-vT/view?usp=sharing">RESUME</a>
                                 </div>
                             </div>
                         </div>
@@ -342,7 +342,6 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. Designed by Siddharth</a>
                         </p>
                     </div>
