--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo1.png" alt="">
+                                    <img src="img/Sid_logo.jpeg" alt="">
                                 </a>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a  href="https://drive.google.com/file/d/1Fw7yGVD-9f4j-W51dLhpw7yXXvOTg0pY/view?usp=sharing">RESUME</a>
+                                    <a  href="https://drive.google.com/file/d/1v3EUD2eYFtBlXkjieGzSMnzDVF-rN-vT/view?usp=sharing">RESUME</a>
                                 </div>
                             </div>
                         </div>
@@ -157,14 +157,6 @@
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
               <h3>Mumbai, India.</h3>
-              <p>Inder Tower Annexe, Prabhadevi, 400025</p>
-            </div>
-          </div>
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-            <div class="media-body">
-              <h3>+91 9930986821</h3>
-              <p>Mon to Fri 9am to 6pm</p>
             </div>
           </div>
           <div class="media contact-info">
@@ -197,7 +189,7 @@
                   <div class="col-xl-6 col-md-6">
                       <div class="socail_links">
                           <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-44b93616b"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
@@ -212,7 +204,6 @@
               <div class="row">
                   <div class="col-xl-12">
                       <p class="copy_right text-center">
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved .</a>
                       </p>
                   </div>
