--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo1.png" alt="">
+                                    <img src="img/Sid_logo.jpeg" alt="">
                                 </a>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-44b93616b"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
@@ -204,9 +204,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved .</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
