--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="social_links">
                 <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="https://www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
@@ -327,7 +327,7 @@
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="https://www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
