--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Siddharth V.</title>
+    <title>Siddharth Vangari</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -253,7 +253,7 @@ Position titles that do this work are not well defined. I describe my perfect fu
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
+                                <li><a href="https://www.linkedin.com/in/siddharth-vangari-2000"> <i class="fa fa-linkedin"></i> </a></li>
                                 <li><a href="https://github.com/SidsMav2000"> <i class="fa fa-github"></i> </a></li>
                                 <li><a href="https://www.instagram.com/maverick_750/"> <i class="fa fa-instagram"></i> </a></li>
                             </ul>
